Recover index.html JS vars

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -19,6 +19,12 @@
       myRedraw="both";
     </script>-->
 
+	<script>
+		var presenter = "<%= presenter %>"; 
+		var title = "<%= title %>";
+		var presentationPassword = "<%= password %>";
+	</script>
+	
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
     <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
