Chat css: put people list side by side

--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class="row" id="main-chat-screen">
-      <div class="col-md-3">
+      <div class="col-md-3" id="peopleDiv">
         <ul id="people" class="list-group"></ul>
       </div>
       <div class="col-md-6">
