Remote SSL support

--- a/AWS_Website/www_static/remote/index.html
+++ b/AWS_Website/www_static/remote/index.html
@@ -15,7 +15,7 @@
         <script defer src="js/slite.js"></script>
         <script src="js/thumbs.0.6.0.min.js"></script>
         <script>
-            var socket = io.connect(document.location.hostname + ':1337');
+            var socket = io.connect(document.location.hostname);
         </script>
 	</head>
 <!--<body onload="startup()"-->
