--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -146,7 +146,7 @@
 		<h1><div class="closescreensharing" id="closescreensharing">x</div></h1>
         <article>
             <!-- just copy this <section> and next script -->
-            <section class="experiment">                
+            <section class="experiment" id="screensharing_top">                
                 <section id="shareYourScreen">
                     <span>
                         Private ?? <a href="/Pluginfree-Screen-Sharing/" target="_blank" title="Open this link for private screen sharing!"><code><strong id="unique-token-screensharing">#123456789</strong></code></a>
@@ -163,18 +163,19 @@
             </section>
 			
 			
-			 <section class="experiment">
+			 <section class="experiment" id="screensharing_install_extension">
                 <h2 id="prerequisites">
-                    <a href="#prerequisites">Prerequisites</a>
+                    <a href="#prerequisites"></a>
                 </h2>
                 <ol>
                     <li>
-                        Chrome? 
-                        <a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Install chrome extension</a>.
-                        <button onclick="!!navigator.webkitGetUserMedia && !!window.chrome && !!chrome.webstore && !!chrome.webstore.install && chrome.webstore.install('https://chrome.google.com/webstore/detail/ajhifddimkapgcifgcodmmfdlknahffk', function() {location.reload();})" id="install-button" style="padding: 0;background: none;height: 61px;vertical-align: middle;cursor:pointer;">
+						<b>Only presenter</b> needs to click this button and only 1 time.<br/>
+						Audience will just see it.<br/>
+                        <a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">.
+                        <button id="install-button" style="padding: 0;background: none;height: 61px;vertical-align: middle;cursor:pointer;">
                             <img src="https://www.webrtc-experiment.com/images/btn-install-chrome-extension.png" alt="Add to Chrome">
                         </button>
-                         / <a href="https://github.com/muaz-khan/Chrome-Extensions/tree/master/desktopCapture">Source Code</a>
+						</a>
                     </li>
                     
                     <li>
