--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -168,18 +168,12 @@
                     <a href="#prerequisites"></a>
                 </h2>
                 <ol>
-                    <li>
-						<b>Only presenter</b> needs to click this button and only 1 time.<br/>
-						Audience will just see it.<br/>
-                        <a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">.
-                        <button id="install-button" style="padding: 0;background: none;height: 61px;vertical-align: middle;cursor:pointer;">
-                            <img src="https://www.webrtc-experiment.com/images/btn-install-chrome-extension.png" alt="Add to Chrome">
-                        </button>
-						</a>
+                    <li id="install_chrome_extension">
+                        <a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Click <b>here</b> to install Chrome Presenter Extension (audience don't need it)</a>
                     </li>
                     
-                    <li>
-                        Firefox? <a href="https://www.webrtc-experiment.com/store/firefox-extension/enable-screen-capturing.xpi">Install Firefox Extension</a> / <a href="https://github.com/muaz-khan/Firefox-Extensions/tree/master/enable-screen-capturing">Source Code</a>
+                    <li id="install_firefox_extension">
+                        <a href="https://www.webrtc-experiment.com/store/firefox-extension/enable-screen-capturing.xpi">Click here to install Firefox Presenter Extension (audience don't need it)</a>
                     </li>
                 </ol>
             </section>
