--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" content="user-scalable=yes">
-            <title>SENDER</title>
+        <meta name="viewport" content="user-scalable=no" />
+            <title>PRESENTATION REMOTE CONTROL</title>
             <link rel="stylesheet" type="text/css" href="./css/index.css">
                 <script src="http://slite.elasticbeanstalk.com:1337/socket.io/socket.io.js"></script>
                 <script type="text/javascript" src="cordova.js"></script>
