--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -103,6 +103,20 @@
 		<iframe src="../A1/help.html" style='width:100%;height:100%'></iframe>
 	</div>
 
+	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
+		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
+		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+			<center>
+				<div id="renameHashDialog">
+						<div style="font-size:22px;">Choose URL for this presentation <span style="font-size:16px"></span></div> 
+						<div style="font-size:16px;">One time cost only 0.99$</div>
+						<input type="text" name="newHash" id="newHash" size="10" maxlength="10" /> </br>
+						<input type="image" id="renameHashButton" src="https://www.paypal.com/en_AU/i/btn/btn_buynow_LG.gif"> <br>
+				</div>
+			</center>
+		</form>
+	</div>
+	
 	<div class='passwordCreateOverlay' id='passwordCreateOverlay'>
 		<div class="closevideo" id="closePasswordCreateOverlay" style='margin-right:30px;'></div>
 		<center>
@@ -230,6 +244,7 @@
 				  <li><a href="javascript:showHidePasswordCreateOverlay()" id="menuPassword">Protect With Password</a></li>
 				  <li><a href="../my.html" id="shareTwitter">My Presentations</a></li>
 				  <li><a href="/">Home</a></li>
+				  <li><a href="javascript:showHideRenamePresentationOverlay()" id="menuRenamePresentation">Rename ($Payed)</a></li>
 				  <li><a href="javascript:openContactUs()" id="menuContactUs">Contact Us / Suggest / Ask</a></li>
 				  <li><a href="javascript:showHideHelpOverlay()" id="menuHelpOverlay">Help</a></li>
 				</ul>
