--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -24,7 +24,8 @@
 		var title = "<%= title %>";
 		var presentationPassword = "<%= password %>";
 	</script>
-	
+    <script src="../js/jquery-2.1.3.min.js"></script>
+    <script src="../js/jquery-ui.min.js"></script>		
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
     <link rel="stylesheet" href="../css/jquery-ui.min.css">
     <link class="rs-file" href="../css/royalslider.css" rel="stylesheet">
@@ -105,16 +106,21 @@
 
 	<div class='renamePresentationOverlay' id='renamePresentationOverlay'>
 		<div class="closevideo" id="closeRenamePresentationOverlay" style='margin-right:30px;'></div>
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="paypalNewHashForm">
+		<input type="hidden" name="cmd" value="_s-xclick">
+		<input type="hidden" name="hosted_button_id" value="TJLGSU6BNSTGC">
+		<input type="hidden" name="on0" value="" id="paypalRenameOn1">
+		<input type="hidden" name="on1" value="" id="paypalRenameOn2">
+		</form>
 			<center>
 				<div id="renameHashDialog">
 						<div style="font-size:22px;">Choose URL for this presentation <span style="font-size:16px"></span></div> 
 						<div style="font-size:16px;">One time cost only 0.99$</div>
-						<input type="text" name="newHash" id="newHash" size="10" maxlength="10" /> </br>
-						<input type="image" id="renameHashButton" src="https://www.paypal.com/en_AU/i/btn/btn_buynow_LG.gif"> <br>
+						<input type="text" name="paypalNewHash" id="paypalNewHash" size="10" maxlength="10" /> </br>
+						<div id="newHashRes"></div>
+						<input type="image" id="renameHashButton" src="https://www.paypal.com/en_AU/i/btn/btn_buynow_LG.gif" onclick="paypal.renameHashStart()"> <br>
 				</div>
 			</center>
-		</form>
 	</div>
 	
 	<div class='passwordCreateOverlay' id='passwordCreateOverlay'>
@@ -259,8 +265,6 @@
 	<div class="navButton navButtonPrev" id="navPrev">&#x2039;</div>
 	<div class="navButton navButtonNext" id="navNext">&#x203a;</div>
 	
-    <script src="../js/jquery-2.1.3.min.js"></script>
-    <script src="../js/jquery-ui.min.js"></script>
     <script class="rs-file" src="../js/jquery.royalslider.min.js"></script>
     <script src="../js/jquery.infinitescroll.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -303,11 +307,9 @@
 	
     <script src="../A1/js/A1.js"></script>
     <script src="../A1/js/notes.js"></script>
-	
+    <script src="../A1/js/paypal.js"></script>
 	<script src="../js/videochat.js"> </script>	
-	
-	
-	
+		
     <!-- end VideoChat Javascript -->
 
     <!--<script>
