--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -109,8 +109,10 @@
 		<form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" id="paypalNewHashForm">
 		<input type="hidden" name="cmd" value="_s-xclick">
 		<input type="hidden" name="hosted_button_id" value="TJLGSU6BNSTGC">
-		<input type="hidden" name="on0" value="" id="paypalRenameOn1">
-		<input type="hidden" name="on1" value="" id="paypalRenameOn2">
+		<input type="hidden" name="on0" value="Slide">
+		<input type="hidden" name="on1" value="Url">
+		<input type="hidden" name="os0" value="" id="paypalRenameOn1">
+		<input type="hidden" name="os1" value="" id="paypalRenameOn2">
 		</form>
 			<center>
 				<div id="renameHashDialog">
