--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -23,7 +23,9 @@
 		var presenter = "<%= presenter %>"; 
 		var title = "<%= title %>";
 		var presentationPassword = "<%= password %>";
-	</script>
+		var payed = "<%= payed %>";
+		var customurl = "<%= customurl %>";
+		</script>
     <script src="../js/jquery-2.1.3.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>		
     <link rel="stylesheet" href="../css/videochat/videochat-style.css">
@@ -117,10 +119,12 @@
 			<center>
 				<div id="renameHashDialog">
 						<div style="font-size:22px;">Choose URL for this presentation <span style="font-size:16px"></span></div> 
-						<div style="font-size:16px;">One time cost only 0.99$</div>
+						<div style="font-size:16px;" id="paypalRenameNotice">One time cost only 0.99$</div>
 						<input type="text" name="paypalNewHash" id="paypalNewHash" size="10" maxlength="10" /> </br>
 						<div id="newHashRes"></div>
 						<input type="image" id="renameHashButton" src="https://www.paypal.com/en_AU/i/btn/btn_buynow_LG.gif" onclick="paypal.renameHashStart()"> <br>
+						<input type="button" id="renameHashButtonPayed" value="Change URL"  onclick="paypal.renameHashStart()" style="display: none"> <br>
+						
 				</div>
 			</center>
 	</div>
