--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -25,7 +25,7 @@
       <div class="col-md-3" id="peopleDiv">
         <ul id="people" class="list-group"></ul>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 conversationAndPeople">
         <div id="conversation">
           <ul id="msgs" class="list-unstyled"></ul>
         </div>
