VideoChat and Screensharing are open for new user
When new user opens a presentation while presentation is already going:
1) if VideoChat is open for everyone, it is open for the late user too
2) if Screensharing is open for everyone, it is open for the late user
too

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -25,6 +25,8 @@
 		var presentationPassword = "<%= password %>";
 		var payed = "<%= payed %>";
 		var customurl = "<%= customurl %>";
+		var isVideoChatOpen = "<%= isVideoChatOpen %>";
+		var isScreensharingOpen = "<%= isScreensharingOpen %>"
 		</script>
     <script src="../js/jquery-2.1.3.min.js"></script>
     <script src="../js/jquery-ui.min.js"></script>		
