Deleted http urls

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -6,11 +6,11 @@
     <meta name="title" content="Live online presentations" />
     <meta name="description" content="Free online web presentations. Social chat, video presentation, personal presentation notes, password protection and much more." />
     <meta name="keywords" content="web presentations, web presentation, presentation, powerpoint, free, free online presentation, free presentation, slide, slides, free slides, powerpoint replacement">
-	<meta content="http://www.webentations.com" property="og:url" />
-    <meta content="http://www.webentations.com/img/logo.png" property="og:image" />
+	<meta content="https://www.webentations.com" property="og:url" />
+    <meta content="https://www.webentations.com/img/logo.png" property="og:image" />
     <link rel="shortcut icon" id="favicon" href="img/favicon.png">
     <meta name="author" content="WEBENTATIONS inc.">
-    <link rel="canonical" href="http://www.webentations.com" />
+    <link rel="canonical" href="https://www.webentations.com" />
 
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
