Fix video chat include js and paypal js

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -308,8 +308,7 @@
         var staticSlides = 13;
     </script>
 	
-	
-	<script src='https://cdn.webrtc-experiment.com/firebase.js'> </script>
+	<!--<script src='https://cdn.webrtc-experiment.com/firebase.js'> </script>-->
 	<script src="../js/conferenceScreensharing.js"> </script>
 	<script src="../js/screensharing.js"> </script>
 	
