Small mobile app remote fixes

--- a/BACKEND/FRONTEND/www/index.html
+++ b/BACKEND/FRONTEND/www/index.html
@@ -29,7 +29,7 @@
         <div class="UI midRow leftCol" id="notes"  style="display: none">1: Beginning slide, or should I say 'slite'. Get ready to see powerpoint with all the powers of the web.</div>
 
         <div style="widht: 100%; height: 100%; text-align: center">
-            <div id="URLBox">http://slite.elasticbeanstalk.com/<input type="text" id="URLSlides" value="A1"></div>
+            <div id="URLBox">www.webentations.com/<input type="text" id="URLSlides" value="A1"></div>
             <div id="currentSlide" onclick="void(0)" style="height: 75%; width: 80%; display: inline-block;">
                 <div id="overlay"></div>
                 <iframe id="theIframe" class="frame" src="http://slite.elasticbeanstalk.com/A1/" seamless></iframe>
