--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -22,9 +22,7 @@
             <div class="container-fluid">
                 <form class="m-form-signin" role="form" action="/signup.html" method="post">
                     <h1>Sign up</h1>
-		    <% if (error == 1) { %>
-				<h4 style="color: #FF0000">Username <i><%= request.param('username') %></i> has already taken. Please try another one.</h4>
-		   <%   } else if (error == 2) { %>
+		   <%  if (error == 2) { %>
 				<h4 style="color: #FF0000">Email <i><%= request.param('email') %></i> has already registered. Please try another one.</h4>
 		   <%   } else if (error == 3) { %>
 				<h4 style="color: #FF0000">DB error. Contact us, please.</h4>
@@ -36,11 +34,6 @@
 
                     <h2>Create your personal account </h2>
                     <div class="form-group">
-                        <label for="exampleInputUsername">Username</label>
-                        <input type="text" class="form-control" placeholder="Enter Username" name="username" value="<%= request.param('username') %>">
-                    </div>
-
-                    <div class="form-group">
                         <label for="exampleInputEmail1">Email address</label>
                         <input type="email" class="form-control" name="email" placeholder="Enter email" value="<%= request.param('email') %>">
                     </div>
@@ -48,11 +41,6 @@
                     <div class="form-group">
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" name="password" placeholder="Password">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="exampleInputConfirmPassword1">Confirm your password</label>
-                        <input type="password" class="form-control" name="password1" placeholder="Password">
                     </div>
 
                     <div class="checkbox">
@@ -123,8 +111,8 @@
         
 		</div>
         
+        <script src="/socket.io/socket.io.js"></script>
 		<script src="js/jquery-2.1.3.min.js"></script>
-        <script>window.jQuery || document.write('<script src="js/jquery-2.1.3.min.js"><\/script>')</script>
         <script src="js/bootstrap.js"></script>
         <script src="js/main.js"></script>
     </body>
