FE fixes for A1 template

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -20,10 +20,10 @@
     </script>-->
 
 	<script>
-		var presenter = <%= presenter %>;
+		var presenter = "<%= presenter %>";
 		var title = "<%= title %>";
-		var presentationPassword = <%= password %>;
-		var payed = <%= payed %>;
+		var presentationPassword = "<%= password %>";
+		var payed = "<%= payed %>";
 		var customurl = "<%= customurl %>";
 		var isVideoChatOpen = "<%= isVideoChatOpen %>";
 		var isScreensharingOpen = "<%= isScreensharingOpen %>"
@@ -303,7 +303,7 @@
     <script> hljs.initHighlightingOnLoad();</script>
 
     <script>
-        var number_of_slides = <%= slidesNum %>;
+        var number_of_slides = "<%= slidesNum %>";
         var slite = "/<%= hash %>/";
     </script>
 
