[feature] Added menu button

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -166,6 +166,7 @@
                     <div class = "titleSize">Buttons</div><br>
                     <div>
                         <div class="close allColors" title= "Close Button"></div>
+                        <div class="menu allColors" title= "Menu Button"></div>
                         
                     </div>
                 </div>
