[refactor] Sttle guide- button

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -163,11 +163,14 @@
                     
                 </div>
                 <div id="buttons">
-                    <div class = "titleSize">Buttons</div><br>
+                    <div class = "titleSize">Icon Buttons</div><br>
                     <div>
                         <div class="close allColors" title= "Close Button"></div>
                         <div class="menu allColors" title= "Menu Button"></div>
                         
+                    </div><br>
+                    <div class = "titleSize">Buttons</div><br>
+                    <div>
                     </div>
                 </div>
 
