[refactor] Added input for form

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -17,7 +17,8 @@
         <link rel="stylesheet" type="text/css" href="css_styleguide/color_palette.css">
         <link rel="stylesheet" type="text/css" href="css_styleguide/page.css">
         <link rel="stylesheet" type="text/css" href="css_styleguide/font.css">
-        <link rel="stylesheet" type="text/css" href="css_styleguide/buttons.css">   
+        <link rel="stylesheet" type="text/css" href="css_styleguide/buttons.css">
+        <link rel="stylesheet" type="text/css" href="css_styleguide/form.css"> 
 
         <!-- font   -->
         <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
@@ -179,7 +180,10 @@
                 </div>
 
                 <div id="form">
-                     <span class = "titleSize">Forms</span>
+                     <div class = "titleSize">Forms</div><br>
+                     <div>
+                        <input type="text" class="form-control input-lg" placeholder="Your name" id="name">
+                    </div>
                 </div>
             </div>
 
