[refactor] Added join button to styleguide

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -172,6 +172,7 @@
                     </div><br>
                     <div class = "titleSize">Buttons</div><br>
                     <div>
+                        <input type="button" class="join" value="Join"></input>
                     </div>
                 </div>
 
