[refactor] Style guide changes after email, button gradient, colors, font

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -21,7 +21,12 @@
         <link rel="stylesheet" type="text/css" href="css_styleguide/form.css"> 
 
         <!-- font   -->
-        <link href='http://fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Rubik' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Baumans' rel='stylesheet' type='text/css'>
 
     </head>
     <body>
@@ -51,11 +56,10 @@
                         </div>
 
                         <div class = "eachBox allColors">
-                            <div class="lightBlue allColors boxBorder"></div>
+                            <div class="whiteBlue allColors boxBorder"></div>
                             <div class="colorStyle" >
-                                <p> Light Blue<br>
-                                #95bada
-                                </p>
+                                <p>White - Blue<br>
+                                #ffffff -> #7badd9 </p>
                             </div>
                         </div>
 
@@ -69,18 +73,17 @@
                         </div>
 
                         <div class = "eachBox allColors">
-                            <div class="lightGray allColors boxBorder"></div>
+                            <div class="greyGrey allColors boxBorder"></div>
                             <div class="colorStyle" >
-                                <p>Light Gray<br>
-                                #e6e5e5
-                                </p>
+                                <p>Grey - Grey<br>
+                                #e6e5e5 -> #c4c4c4 </p>
                             </div>
                         </div>
 
                         <div class = "eachBox allColors">
                             <div class="gray allColors boxBorder"></div>
                             <div class="colorStyle" >
-                                <p>Gray<br>
+                                <p>Grey<br>
                                 #c4c4c4
                                 </p>
                             </div>
@@ -93,66 +96,18 @@
                                 #000000</p>
                             </div>
                         </div>
-         
-                    </div>
-
-                    <div id = "allColors">
-
-                         <div class = "eachBox allColors">
-                            <div class="whiteBlue allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Gray<br>
-                                #ffffff -> #95bada </p>
-                            </div>
-                        </div>
-
-                        <div class = "eachBox allColors">
-                            <div class="whiteDarkBlue allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Gray<br>
-                                #ffffff -> #7badd9 </p>
-                            </div>
-                        </div>
-
-                        <div class = "eachBox allColors">
-                            <div class="lightGrayBlue allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Blue<br>
-                                #e6e5e5 -> #95bada </p>
-                            </div>
-                        </div>
-
-                        <div class = "eachBox allColors">
-                            <div class="grayBlue allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Blue<br>
-                                #c4c4c4 -> #7badd9 </p>
-                            </div>
-                        </div>
-
-                        <div class = "eachBox allColors">
-                            <div class="grayGray allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Gray<br>
-                                #e6e5e5 -> #c4c4c4 </p>
-                            </div>
-                        </div>
-
-                        <div class = "eachBox allColors">
-                            <div class="grayBlack allColors boxBorder"></div>
-                            <div class="colorStyle" >
-                                <p>Gray -> Black<br>
-                                #c4c4c4 -> #000000 </p>
-                            </div>
-                        </div>
-            
                     </div>
                 </div>
 
                 </div>
                 <div id="typography">
                     <div class = "titleSize">Typography</div><br>
-                    <div class = "font">Font-family: "Varela Round", sans-serif;</div>
+                    <div class = "font">Font-family: "Raleway", sans-serif;</div>
+                    <div class = "font2">Font-family: "Orbitron", sans-serif;</div>
+                     <div class = "font3">Font-Family: 'Roboto', sans-serif;</div>
+                     <div class = "font4">Font-Family: 'Rubik', sans-serif;</div>
+                     <div class = "font5">Font-Family: 'Krona One', sans-serif;</div>
+                     <div class = "font6">Font-Family: 'Baumans', cursive;</div>
 
                     <div class = "allColors font">
                         <h5> Font Size</h5>
