[refactor] Style guide changed: 2 fonts set with sample sizes, top of styleguide gray changed to color gray 1) Top of the page, this is not the grey we chose below, can you update it please?

--- a/AWS_Website/www_static/A1/styleguide/styleguide.html
+++ b/AWS_Website/www_static/A1/styleguide/styleguide.html
@@ -22,10 +22,6 @@
 
         <!-- font   -->
         <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Rubik' rel='stylesheet' type='text/css'>
-        <link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Baumans' rel='stylesheet' type='text/css'>
 
     </head>
@@ -102,19 +98,20 @@
                 </div>
                 <div id="typography">
                     <div class = "titleSize">Typography</div><br>
-                    <div class = "font">Font-family: "Raleway", sans-serif;</div>
-                    <div class = "font2">Font-family: "Orbitron", sans-serif;</div>
-                     <div class = "font3">Font-Family: 'Roboto', sans-serif;</div>
-                     <div class = "font4">Font-Family: 'Rubik', sans-serif;</div>
-                     <div class = "font5">Font-Family: 'Krona One', sans-serif;</div>
-                     <div class = "font6">Font-Family: 'Baumans', cursive;</div>
+                    <div class = "fontR">Font-family: "Raleway", sans-serif;</div>
+                    <div class = "fontB">Font-Family: 'Baumans', cursive;</div>
 
                     <div class = "allColors font">
                         <h5> Font Size</h5>
-                        <div class = "size4">Personal Notes Text Size: 10px </div>
-                        <div class = "size1"> Body Text Size: 14px </div>
-                        <div class = "size2"> Link Text Size: 16px </div>
-                        <div class = "size3"> Header Text Size: 20px </div>
+                        <div class = "size4 fontR">Personal Notes Text Size: 10px,   font-family: 'Raleway'</div>
+                        <div class = "size1 fontR"> Body Text Size: 14px, font-family: 'Raleway' </div>
+                        <div class = "size2 fontR"> Link Text Size: 16px, font-family: 'Raleway' </div>
+                        <div class = "size3 fontR"> Header Text Size: 20px, font-family: 'Raleway' </div><br>
+
+                        <div class = "size4 fontB">Personal Notes Text Size: 10px,   font-family: 'Baumans'</div>
+                        <div class = "size1 fontB"> Body Text Size: 14px, font-family: 'Baumans' </div>
+                        <div class = "size2 fontB"> Link Text Size: 16px, font-family: 'Baumans' </div>
+                        <div class = "size3 fontB"> Header Text Size: 20px, font-family: 'Baumans' </div>
                     </div>
                     
                 </div>
