--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/jquery-ui.min.css">
     <link rel="stylesheet" href="js/elastislide/css/elastislide.css" />	
+
+    <!-- font   -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="css/base.css">-->
     <!--<link rel="stylesheet" href="css/skel.css" />-->
