[refactor] index.html change font to be consistent to font-family: 'Raleway', sans-serif;

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -40,6 +40,8 @@
     <!-- slider stylesheets -->
     <link class="rs-file" href="../css/rs-default.css" rel="stylesheet">
     <link class="rs-file" href="../A1/css/A1.css" rel="stylesheet">
+     <!-- font   -->
+    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 
 <body> <!--onresize="resizeCanvas()">-->
