--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -124,7 +124,7 @@
 				<div id="renameHashDialog">
 						<div style="font-size:22px;">Choose URL for this presentation <span style="font-size:16px"></span></div>
 						<div style="font-size:16px;" id="paypalRenameNotice">One time cost only 0.99$</div>
-						<input type="text" name="paypalNewHash" id="paypalNewHash" size="10"/> </br>
+						<input type="text" name="paypalNewHash" id="paypalNewHash" size="30" maxlength="30"/> </br>
 						<div id="newHashRes"></div>
 						<input type="image" id="renameHashButton" src="https://www.paypal.com/en_AU/i/btn/btn_buynow_LG.gif" onclick="paypal.renameHashStart()"> <br>
 						<input type="button" id="renameHashButtonPayed" value="Change URL"  onclick="paypal.renameHashStart()" style="display: none"> <br>
