[refactor] Add change css for chat, and font modifications

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -18,7 +18,8 @@
     <link rel="stylesheet" href="js/elastislide/css/elastislide.css" />	
 
     <!-- font   -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
+     <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
     <!--<link rel="stylesheet" href="css/bootstrap.css">-->
     <!--<link rel="stylesheet" href="css/base.css">-->
     <!--<link rel="stylesheet" href="css/skel.css" />-->
