--- a/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
+++ b/AWS_Website/www_static/A1/webrtc/sharing-presenter.html
@@ -41,6 +41,20 @@ function stopSession() {
 </script>
 </head>
 <body onload="startSession()">
+<section class="experiment" id="screensharing_install_extension">
+	<h2 id="prerequisites">
+		<a href="#prerequisites"></a>
+	</h2>
+	<ol>
+		<li id="install_chrome_extension">
+			<a href="https://chrome.google.com/webstore/detail/screen-capturing/ajhifddimkapgcifgcodmmfdlknahffk" target="_blank">Click <b>here</b> to install Chrome Presenter Extension (audience don't need it)</a>
+		</li>
+
+		<li id="install_firefox_extension">
+			<a href="https://www.webrtc-experiment.com/store/firefox-extension/enable-screen-capturing.xpi">Click here to install Firefox Presenter Extension (audience don't need it)</a>
+		</li>
+	</ol>
+</section>
 
 <!--a onclick="startSession();">Start</a-->
 <!--a onclick="stopSession();">Stop</a-->
