--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -178,12 +178,12 @@
 
 		<div id="screensharing">
 		<h1><div class="closescreensharing" id="closescreensharing">x</div></h1>
-		<iframe width="100%" height="100%" id="screensharingiframe"></iframe>
+		<iframe width="100%" height="100%" id="screensharingiframe"  scrolling="no"></iframe>
 	</div>
 	<div id="videochatpanel"></div>
 	<div id="videochat">
 		<h1><div class="closevideo" id="closevideo"></div></h1>
-		<iframe width="100%" height="100%" id="videoframe" src="/video.html"></iframe>
+		<iframe width="100%" height="100%" id="videoframe" src="/video.html" scrolling="no"></iframe>
 	</div>
 
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
