[refactor] Updated front page font

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -42,7 +42,7 @@
     <link class="rs-file" href="../A1/css/A1.css" rel="stylesheet">
      <!-- font   -->
     <!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
-    <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
 </head>
 
 <body> <!--onresize="resizeCanvas()">-->
