--- a/AWS_Website/www_static/A1/help.html
+++ b/AWS_Website/www_static/A1/help.html
@@ -7,16 +7,16 @@
 <!--
  /* Font Definitions */
  @font-face
-	{font-family: 'Raleway', sans-serif;;
+	{font-family: 'Yanone Kaffeesatz', sans-serif;
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
-	{font-family: 'Raleway', sans-serif;;
+	{font-family: 'Yanone Kaffeesatz', sans-serif;
 	panose-1:2 15 3 2 2 2 4 3 2 4;}
 @font-face
-	{font-family: 'Raleway', sans-serif;;
+	{font-family: 'Yanone Kaffeesatz', sans-serif;
 	panose-1:2 15 5 2 2 2 4 3 2 4;}
 @font-face
-	{font-family: 'Raleway', sans-serif;;
+	{font-family: 'Yanone Kaffeesatz', sans-serif;
 	panose-1:2 11 5 2 4 2 4 2 2 3;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
@@ -26,7 +26,7 @@
 	margin-left:0in;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 h1
 	{mso-style-link:"Heading 1 Char";
 	margin-top:20.0pt;
@@ -35,7 +35,7 @@ h1
 	margin-left:0in;
 	page-break-after:avoid;
 	font-size:18.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;
 	font-weight:normal;}
 h2
@@ -47,7 +47,7 @@ h2
 	margin-bottom:.0001pt;
 	page-break-after:avoid;
 	font-size:14.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;
 	font-weight:normal;}
 h3
@@ -59,7 +59,7 @@ h3
 	margin-bottom:.0001pt;
 	page-break-after:avoid;
 	font-size:14.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-variant:small-caps;
 	font-weight:normal;}
 h4
@@ -72,7 +72,7 @@ h4
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;
 	font-weight:normal;}
 h5
@@ -85,7 +85,7 @@ h5
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;
 	font-weight:normal;
 	font-style:italic;}
@@ -99,7 +99,7 @@ h6
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:10.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#262626;
 	text-transform:uppercase;}
 p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
@@ -112,7 +112,7 @@ p.MsoHeading7, li.MsoHeading7, div.MsoHeading7
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:10.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#262626;
 	text-transform:uppercase;
 	font-weight:bold;
@@ -127,7 +127,7 @@ p.MsoHeading8, li.MsoHeading8, div.MsoHeading8
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:10.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#7F7F7F;
 	text-transform:uppercase;
 	font-weight:bold;}
@@ -141,7 +141,7 @@ p.MsoHeading9, li.MsoHeading9, div.MsoHeading9
 	line-height:107%;
 	page-break-after:avoid;
 	font-size:10.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#7F7F7F;
 	text-transform:uppercase;
 	font-weight:bold;
@@ -153,7 +153,7 @@ p.MsoToc1, li.MsoToc1, div.MsoToc1
 	margin-left:0in;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoToc2, li.MsoToc2, div.MsoToc2
 	{margin-top:0in;
 	margin-right:0in;
@@ -161,14 +161,14 @@ p.MsoToc2, li.MsoToc2, div.MsoToc2
 	margin-left:11.0pt;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoCaption, li.MsoCaption, div.MsoCaption
 	{margin-top:0in;
 	margin-right:0in;
 	margin-bottom:8.0pt;
 	margin-left:0in;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-variant:small-caps;
 	color:#595959;
 	font-weight:bold;}
@@ -177,7 +177,7 @@ p.MsoTitle, li.MsoTitle, div.MsoTitle
 	margin:0in;
 	margin-bottom:.0001pt;
 	font-size:36.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;
 	text-transform:uppercase;
 	letter-spacing:-.5pt;}
@@ -186,7 +186,7 @@ p.MsoTitleCxSpFirst, li.MsoTitleCxSpFirst, div.MsoTitleCxSpFirst
 	margin:0in;
 	margin-bottom:.0001pt;
 	font-size:36.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;
 	text-transform:uppercase;
 	letter-spacing:-.5pt;}
@@ -195,7 +195,7 @@ p.MsoTitleCxSpMiddle, li.MsoTitleCxSpMiddle, div.MsoTitleCxSpMiddle
 	margin:0in;
 	margin-bottom:.0001pt;
 	font-size:36.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;
 	text-transform:uppercase;
 	letter-spacing:-.5pt;}
@@ -204,7 +204,7 @@ p.MsoTitleCxSpLast, li.MsoTitleCxSpLast, div.MsoTitleCxSpLast
 	margin:0in;
 	margin-bottom:.0001pt;
 	font-size:36.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;
 	text-transform:uppercase;
 	letter-spacing:-.5pt;}
@@ -216,7 +216,7 @@ p.MsoSubtitle, li.MsoSubtitle, div.MsoSubtitle
 	margin-left:0in;
 	line-height:107%;
 	font-size:14.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-variant:small-caps;
 	color:#595959;}
 a:link, span.MsoHyperlink
@@ -229,7 +229,7 @@ p.MsoNoSpacing, li.MsoNoSpacing, div.MsoNoSpacing
 	{margin:0in;
 	margin-bottom:.0001pt;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{margin-top:0in;
 	margin-right:0in;
@@ -237,7 +237,7 @@ p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	margin-left:.5in;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoListParagraphCxSpFirst, li.MsoListParagraphCxSpFirst, div.MsoListParagraphCxSpFirst
 	{margin-top:0in;
 	margin-right:0in;
@@ -246,7 +246,7 @@ p.MsoListParagraphCxSpFirst, li.MsoListParagraphCxSpFirst, div.MsoListParagraphC
 	margin-bottom:.0001pt;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoListParagraphCxSpMiddle, li.MsoListParagraphCxSpMiddle, div.MsoListParagraphCxSpMiddle
 	{margin-top:0in;
 	margin-right:0in;
@@ -255,7 +255,7 @@ p.MsoListParagraphCxSpMiddle, li.MsoListParagraphCxSpMiddle, div.MsoListParagrap
 	margin-bottom:.0001pt;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxSpLast
 	{margin-top:0in;
 	margin-right:0in;
@@ -263,7 +263,7 @@ p.MsoListParagraphCxSpLast, li.MsoListParagraphCxSpLast, div.MsoListParagraphCxS
 	margin-left:.5in;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoQuote, li.MsoQuote, div.MsoQuote
 	{mso-style-link:"Quote Char";
 	margin-top:8.0pt;
@@ -271,7 +271,7 @@ p.MsoQuote, li.MsoQuote, div.MsoQuote
 	margin-bottom:8.0pt;
 	margin-left:.5in;
 	font-size:12.5pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
 	{mso-style-link:"Intense Quote Char";
 	margin-top:14.0pt;
@@ -280,7 +280,7 @@ p.MsoIntenseQuote, li.MsoIntenseQuote, div.MsoIntenseQuote
 	margin-left:.75in;
 	text-align:center;
 	font-size:16.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;}
 span.MsoSubtleEmphasis
 	{color:#595959;
@@ -310,17 +310,17 @@ p.MsoTocHeading, li.MsoTocHeading, div.MsoTocHeading
 	margin-left:0in;
 	page-break-after:avoid;
 	font-size:18.0pt;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;}
 span.Heading1Char
 	{mso-style-name:"Heading 1 Char";
 	mso-style-link:"Heading 1";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;}
 span.Heading2Char
 	{mso-style-name:"Heading 2 Char";
 	mso-style-link:"Heading 2";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;}
 p.msolistparagraphcxspfirst, li.msolistparagraphcxspfirst, div.msolistparagraphcxspfirst
 	{mso-style-name:msolistparagraphcxspfirst;
@@ -331,7 +331,7 @@ p.msolistparagraphcxspfirst, li.msolistparagraphcxspfirst, div.msolistparagraphc
 	margin-bottom:.0001pt;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.msolistparagraphcxspmiddle, li.msolistparagraphcxspmiddle, div.msolistparagraphcxspmiddle
 	{mso-style-name:msolistparagraphcxspmiddle;
 	margin-top:0in;
@@ -341,7 +341,7 @@ p.msolistparagraphcxspmiddle, li.msolistparagraphcxspmiddle, div.msolistparagrap
 	margin-bottom:.0001pt;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.msolistparagraphcxsplast, li.msolistparagraphcxsplast, div.msolistparagraphcxsplast
 	{mso-style-name:msolistparagraphcxsplast;
 	margin-top:0in;
@@ -350,7 +350,7 @@ p.msolistparagraphcxsplast, li.msolistparagraphcxsplast, div.msolistparagraphcxs
 	margin-left:.5in;
 	line-height:107%;
 	font-size:11.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 p.msopapdefault, li.msopapdefault, div.msopapdefault
 	{mso-style-name:msopapdefault;
 	margin-right:0in;
@@ -358,34 +358,34 @@ p.msopapdefault, li.msopapdefault, div.msopapdefault
 	margin-left:0in;
 	line-height:107%;
 	font-size:12.0pt;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 span.Heading3Char
 	{mso-style-name:"Heading 3 Char";
 	mso-style-link:"Heading 3";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-variant:small-caps;}
 span.Heading4Char
 	{mso-style-name:"Heading 4 Char";
 	mso-style-link:"Heading 4";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;}
 span.Heading5Char
 	{mso-style-name:"Heading 5 Char";
 	mso-style-link:"Heading 5";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	text-transform:uppercase;
 	font-style:italic;}
 span.Heading6Char
 	{mso-style-name:"Heading 6 Char";
 	mso-style-link:"Heading 6";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#262626;
 	text-transform:uppercase;
 	font-weight:bold;}
 span.Heading7Char
 	{mso-style-name:"Heading 7 Char";
 	mso-style-link:"Heading 7";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#262626;
 	text-transform:uppercase;
 	font-weight:bold;
@@ -393,14 +393,14 @@ span.Heading7Char
 span.Heading8Char
 	{mso-style-name:"Heading 8 Char";
 	mso-style-link:"Heading 8";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#7F7F7F;
 	text-transform:uppercase;
 	font-weight:bold;}
 span.Heading9Char
 	{mso-style-name:"Heading 9 Char";
 	mso-style-link:"Heading 9";
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#7F7F7F;
 	text-transform:uppercase;
 	font-weight:bold;
@@ -408,20 +408,20 @@ span.Heading9Char
 span.TitleChar
 	{mso-style-name:"Title Char";
 	mso-style-link:Title;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	color:#404040;
 	text-transform:uppercase;
 	letter-spacing:-.5pt;}
 span.SubtitleChar
 	{mso-style-name:"Subtitle Char";
 	mso-style-link:Subtitle;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'Yanone Kaffeesatz', sans-serif;
 	font-variant:small-caps;
 	color:#595959;}
 span.QuoteChar
 	{mso-style-name:"Quote Char";
 	mso-style-link:Quote;
-	font-family: 'Raleway', sans-serif;}
+	font-family: 'Yanone Kaffeesatz', sans-serif;}
 span.IntenseQuoteChar
 	{mso-style-name:"Intense Quote Char";
 	mso-style-link:"Intense Quote";
