[refactor] Menu button changed to be consitent to rest of menu selection

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -77,8 +77,8 @@
 
 
 	<div id="sliteWatermak" style="height:40px; line-height:40px;">
-        <span style="vertical-align:top;" id='menuTitle'></span>
-        <span style="vertical-align:top;" alt="Website Menu">☰</span>
+        <span id="sliteTitle" alt="Website Title"></span>
+        <span id="sliteMenu" alt="Website Menu">☰</span>
     </div>
 
 
