[refactor] Updated singin page (font)

--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -16,6 +16,9 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/screen.css">
 
+        <!-- font -->
+        <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+
     </head>
     <body style='background-image: url(img/Slite_Background.jpg);'>
         <section class="middle">
