--- a/AWS_Website/www_static/A1/video-presenter.html
+++ b/AWS_Website/www_static/A1/video-presenter.html
@@ -16,10 +16,10 @@ var MODERATOR_SESSION_ID = '<%= hash %>-video';    // room-id
 var MODERATOR_ID         = '<%= userId%>';    // user-id
 var MODERATOR_SESSION    = {         // media-type
     audio: true,
-    video: true
+    video: false
 };
 var MODERATOR_EXTRA      = {};       // empty extra-data
-var socket = io.connect(document.location.hostname + ':' + location.port);
+
 var moderator     = new RTCMultiConnection(MODERATOR_CHANNEL_ID);
 moderator.autoCloseEntireSession = true;
 moderator.session = MODERATOR_SESSION;
@@ -28,7 +28,7 @@ moderator.extra   = MODERATOR_EXTRA;
 
 moderator.onstream = function(event) {
 	if(event.isVideo) {
-		socket.emit("presenterVideoChat", {open: true, hash: '<%= hash %>'});
+		socket.emit("presenterVideoChat", {open: true, hash: currentHash});
 		$( "#videosharing" ).append(event.mediaElement);
 	}
 	
