[refactor] Fix font and icons on sing up page

--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -16,6 +16,11 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/screen.css">
 
+        <!-- font -->
+        <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+        <!-- font icons -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
     </head>
     <body style='background-image: url(img/Slite_Background.jpg);'>
         <section class="middle">
@@ -92,16 +97,16 @@
                         <ul class="nav navbar-nav navbar-right">
                           <li class="link-signin">
                             <% if (!user) { %>
-                              <a href="signin.html"><span class="glyphicon glyphicon-user"></span> Sign in</a>
+                              <a href="signin.html"><span class="fa fa-sign-in"></span> Sign in</a>
                            <% } else { %>
-                              <a href="/account.html"><span class="glyphicon glyphicon-user"></span> Hello, <%= user.username %>.</a>
+                              <a href="/account.html"><span class="fa fa-user"></span> Hello, <%= user.username %>.</a>
                             <% } %> 
                           </li>
                           <li class="link-signin">
                            <% if (!user) { %> 
-                              <a href="signup.html"><span class="glyphicon glyphicon-user"></span> Sign up</a>
+                              <a href="signup.html"><span class="fa fa-user-plus"></span> Sign up</a>
                            <% } else { %>
-                              <a href="/logout"><span class="glyphicon glyphicon-user"></span> Sign out.</a>
+                              <a href="/logout"><span class="fa fa-sign-out"></span> Sign out.</a>
                             <% } %>
                           </li>
                         </ul>
