[refactor] Added second background

--- a/AWS_Website/www_static/signin.html
+++ b/AWS_Website/www_static/signin.html
@@ -22,7 +22,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
     </head>
-    <body style='background-image: url(img/Slite_Background.jpg);'>
+    <!-- style='background-image: url(img/Slite_Background.jpg);' -->
+    <body>
         <section class="middle">
             <div class="container-fluid">
 
