--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -98,7 +98,7 @@
                     	<li><a href="signin.html" data-index="three" class="glyphicon glyphicon-user">Sign in</a></li>
 			<li><a href="signup.html" data-index="four" class="glyphicon glyphicon-user">Sign up</a></li>
                     <% } else { %>
-			<li><a href="/my.html" data-index="three" class="glyphicon glyphicon-user"> Hello, <%= user.email %>.</a></li>
+			<li><a href="/my.html" data-index="three" class="glyphicon glyphicon-user"> Hello, <%= user.email %></a></li>
 			<li><a href="/logout" data-index="three" class="glyphicon glyphicon-user">Sign out</a></li>
                     <% } %>
             </ul>
