[refactor] Change close button, change font to Lato

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -43,7 +43,7 @@
     <link class="rs-file" href="../A1/css/A1.css" rel="stylesheet">
      <!-- font   -->
     <!-- <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
-    <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body> <!--onresize="resizeCanvas()">-->
@@ -182,7 +182,7 @@
 	</div>
 	<div id="videochatpanel"></div>
 	<div id="videochat">
-		<h1><div class="closevideo" id="closevideo"></div></h1>
+		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
 		<iframe width="100%" height="100%" id="videoframe" src="/video.html" scrolling="no"></iframe>
 	</div>
 
