--- a/AWS_Website/www_static/about.html
+++ b/AWS_Website/www_static/about.html
@@ -17,14 +17,15 @@
 
         <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
+
 		<style>
 
  /* Font Definitions */
  @font-face
-	{font-family:"Cambria Math";
+	{font-family: 'Lato', sans-serif;
 	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
-	{font-family:Calibri;
+	{font-family: 'Lato', sans-serif;
 	panose-1:2 15 5 2 2 2 4 3 2 4;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
@@ -34,7 +35,7 @@
 	margin-left:0in;
 	line-height:107%;
 	font-size:16.0pt;
-	font-family:"Calibri","sans-serif";}
+	font-family: 'Lato', sans-serif;}
 .MsoPapDefault
 	{margin-bottom:8.0pt;
 	line-height:107%;}
