--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/flags.css">
   <link rel="stylesheet" href="css/app.css">
   <!-- google font -->
-  <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <div class="main col-md-6 col-md-offset-3">
