--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -191,7 +191,7 @@
 	<div id="videochatpanel"></div>
 	<div id="videochat">
 		<span class="closeLiveVideo"><div class="closevideo" id="closevideo"></div></span>
-		<iframe width="100%" height="100%" id="videoframe" src="/video.html" scrolling="no"></iframe>
+		<iframe width="100%" height="100%" id="videoframe" scrolling="no"></iframe>
 	</div>
 
 	<div class="startTemporaryPopup" id="videoChatExplanator">&#8592; click grey bar to open Video Chat</div>
