[refactor] Close buttons for screen share

--- a/AWS_Website/www_static/A1/index.html
+++ b/AWS_Website/www_static/A1/index.html
@@ -86,7 +86,7 @@
 
   	<center>
       <div id="screensharing" class="rsContainer">
-        <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 6%; top: 5%;">
+        <h1><div class="closeVideo" id="closescreensharing" style="position: absolute; right: 1%; top: 8%;" title="Close Screen Share">
         </div></h1>
         <iframe width="100%" height="100%" id="screensharingiframe" style="margin-left:5%;" scrolling="no"></iframe>
       </div>
@@ -103,7 +103,7 @@
 
 	<div id="comments">
 			<center><div class='panelTitle' style='position: absolute; left: 7%;'>Live Chat about this presentation</div><center>
-			<div class="closevideo" id="closeChat" style='margin-right: 20px;'></div>
+			<div class="closevideo" id="closeChat" style='margin-right: 20px;' title="Close Chat"></div>
 			<iframe id="urlChat" src="../chat.html" style='width:100%;height:100%'></iframe>
 			<script>
 			    var pathName = document.location.pathname;
@@ -116,7 +116,7 @@
 	</div>
 
 	<div class='helpOverlay' id='helpOverlay'>
-		<div class="closevideo" id="closeHelpOverlay" style='margin-right:30px;'></div>
+		<div class="closevideo" id="closeHelpOverlay" style='margin-right:30px;' title="Close Video"></div>
 		<iframe src="../A1/help.html" style='width:100%;height:100%'></iframe>
 	</div>
 
