Page menus fixes

--- a/AWS_Website/www_static/signup.html
+++ b/AWS_Website/www_static/signup.html
@@ -69,8 +69,9 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
-                <li><a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a></li>
-                <li><a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a></li>
+                <li><a href="/" class='menuLink' id='menuAbout'>Upload</a></li>
+                <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
+                <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
                 <% if (!user) { %>
                 <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
                 <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
