--- a/AWS_Website/www_static/my.html
+++ b/AWS_Website/www_static/my.html
@@ -9,7 +9,7 @@
       <title>Slite - web presentation software</title>
       <meta name="description" content="">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
       <script src="js/jquery-2.1.3.min.js"></script>
       <script src="js/jquery.scrolly.min.js"></script>
       <script src="js/jquery.dropotron.min.js"></script>
@@ -22,9 +22,9 @@
       <script src="/socket.io/socket.io.js"></script>
       <script src="js/client.js"></script>
       <script src="js/main.js"></script>
-      <script src="js/jquery.scrollTo.js"></script> 
+      <script src="js/jquery.scrollTo.js"></script>
 
-		
+
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
       <link rel="icon" href="favicon.ico" type="image/x-icon">
 
@@ -56,8 +56,9 @@
         <header id="header">
           <nav id="nav">
               <ul id="navigation" class="clearfix">
-                <li><a href="http://www.slite.us#2" class='menuLink' id='menuAbout'>About</a></li>
-                <li><a href="http://www.slite.us#3" class='menuLink' id='menuContact'>Contact</a></li>
+                <li><a href="/" class='menuLink' id='menuAbout'>Upload</a></li>
+                <li><a href="/#one" class='menuLink' id='menuAbout'>About</a></li>
+                <li><a href="/#four" class='menuLink' id='menuContact'>Contact</a></li>
                 <% if (!user) { %>
                 <li><a href="signin.html" data-index="three" class="">Sign in</a></li>
                 <li><a href="signup.html" data-index="four" class="">Sign up</a></li>
@@ -67,7 +68,7 @@
                 <% } %>
               </ul>
           </nav>
-        </header>		
-		
+        </header>
+
     </body>
 </html>
